# skia-seekbar-mobile

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/adrcotfas/skiaseekbar/: MainActivity.kt
android/app/src/main/kotlin/com/example/skiaseekbar/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
ios/: Info.plist  LaunchScreen.storyboard
ios/SkiaSeekBar/product_icon.icon/: icon.json
libs/skplayer_ui/: CMakeLists.txt
libs/skplayer_ui/include/skplayer_ui/: ThemeConstants.h  VideoContainer.h
libs/skplayer_ui/src/: Chapter.h  PlayPauseButton.h  SeekBar.h  SeekBarState.h  SeekChevronOverlay.h  SeekFeedbackOverlay.h  SeekPreviewTooltip.h  Theme.h  TimeBadge.h  TimeFormat.h  UIState.h  VideoContainer.cpp
scripts/: build-ios.sh  build-skia-android.sh  build-skia-ios.sh  setup.sh
src/: OverlayTypefaceProvider.cpp  OverlayTypefaceProvider.h  SpaceExplorationShader.h  main.cpp
